# stack_overflow_analysis_e2e

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 00_exploration.ipynb  01_preprocessing.ipynb  02_desc_analytics.ipynb  03_feature_engineering.ipynb  04_data_cleaning.ipynb
reports/figures/: heatmap.html  normalized_heatmap.html  pro_exp_by_age.html  pro_exp_distribution_by_age.html  treemap_skills_freq.html
stack_overflow_analysis_e2e/: __init__.py  dataset.py  features.py  plots.py
stack_overflow_analysis_e2e/modeling/: predict.py  train.py
