[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stack_overflow_analysis_e2e"
version = "0.0.1"
description = "Full end to end ML project for the data from stack over flow survey"
authors = [
  { name = "Yossef Ezz" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["stack_overflow_analysis_e2e"]
force_sort_within_sections = true
